# raylibtriangleshader

./: CMakeLists.txt  main.cpp  main2.cpp
resources/shaders/: lineshader.fs  lineshader.vx
shaders/: lineshader.fs  lineshader.ge  lineshader.vx
